# VA50-navigation

./: .gitignore  LICENSE  README.md  build_circulation.sh  circulation4-1.yml  circulation4-2.yml  circulation4-3.yml  circulation4.yml  fish2bird.py  genconfig.py  intersection.ipynb  requirements.txt  road_network.json  yolov4-tiny_training.cfg
dev/: fish2bird.py  intersection.ipynb  simulator.yml  test-data.ipynb  traffic-light-detection.ipynb  traffic_sign_detection.ipynb
dev/distances/: CMakeLists.txt  package.xml
dev/distances/scripts/: distances.py
dev/extract_image/: CMakeLists.txt  package.xml
dev/extract_image/scripts/: extract_image.py
dev/lane_detection/: CMakeLists.txt  package.xml
dev/lane_detection/scripts/: lane_detection.py
extract_image/: CMakeLists.txt
lane_detection/scripts/: lane_detection.py
src/circulation/: CMakeLists.txt  package.xml
src/circulation/msg/: TimeBatch.msg
src/circulation/scripts/: Makefile  TransformBatch.py  circulation4.py  fish2bird.pyx  fuzzylines.pyx  linetrack.pyx  positioning.pyx  roadnet.py  trajectorybuild.pyx  trajeometry.pxd  trajeometry.pyx  trajutil.pyx  util.hpp  vector11.pxd
src/circulation/scripts/src/: fish2bird.pyx  fish2bird_cuda.cu  fish2bird_cuda.h  fuzzylines.pyx  linetrack.pyx  positioning.pyx  trajectorybuild.pyx  trajeometry.pxd  trajeometry.pyx  trajutil.pxd  trajutil.pyx  util.hpp  vector11.pxd
src/circulation/srv/: DropVelocity.srv  TransformBatch.srv
src/control/: CMakeLists.txt  package.xml
src/control/scripts/: control.py
src/direction/: CMakeLists.txt  package.xml
src/direction/scripts/: signTransmit.py
src/trafficsigns/: CMakeLists.txt  package.xml
src/trafficsigns/msg/: TrafficSign.msg  TrafficSignStatus.msg
src/trafficsigns/scripts/: distance_extractor.py  traffic_light_detection.py  traffic_sign_detection.py  trafficsign.py
src/trajectory/: CMakeLists.txt  package.xml
src/trajectory/cmake/: FindMLPACK.cmake
src/trajectory/include/: config.h  fish2bird.h
src/trajectory/include/trajectory/: Direction.h  DiscreteCurve.h  DiscreteGeometry.h  FuzzyLaneSystem.h  IntersectionHint.h  LineDetection.h  Marking.h  NavigationMode.h  Statistics.h  TrajectoryExtractorNode.h  TrajectoryVisualizer.h  Utility.h
src/trajectory/msg/: Trajectory.msg
src/trajectory/src/: DiscreteCurve.cpp  FuzzyLaneSystem.cpp  IntersectionHint.cpp  LineDetection.cpp  Marking.cpp  TrajectoryVisualizer.cpp  fish2bird.cpp  main.cpp
src/trajectory/src/TrajectoryExtractorNode/: Callbacks.cpp  Initialization.cpp  Intersection.cpp  Lane.cpp  NavigationMode.cpp  Preprocessing.cpp  Trajectory.cpp  Transforms.cpp
src/trajectory/test/: test_DiscreteCurve.hpp  test_FuzzyLanes.hpp  test_LineDetection.hpp  test_Utility.hpp  test_main.cpp  testref_branches.cpp  testref_branches.h  testref_curvature.cpp  testref_curvature.h  testref_cut_angles.cpp  testref_cut_angles.h  testref_dilate.cpp  testref_dilate.h  testref_filter_lines.cpp  testref_filter_lines.h  testref_filtered_target.cpp  testref_filtered_target.h  testref_fuzzy_parameters.cpp  testref_fuzzy_parameters.h  testref_fuzzy_scores.cpp  testref_fuzzy_scores.h  testref_gradient.cpp  testref_gradient.h  testref_length.cpp  testref_length.h  testref_project_point.cpp  testref_project_point.h  testref_resample.cpp  testref_resample.h  testref_savgol.cpp  testref_savgol.h  testref_vector_angle.cpp  testref_vector_angle.h
src/transformtrack/: CMakeLists.txt  package.xml
src/transformtrack/include/: config.h
src/transformtrack/include/transformtrack/: TransformManager.h  TransformTrackNode.h
src/transformtrack/src/: TransformManager.cpp  TransformTrackNode.cpp  config.cpp  main.cpp
src/transformtrack/srv/: DropVelocity.srv  TransformBatch.srv
src/visualization/: CMakeLists.txt  package.xml
src/visualization/msg/: VizUpdate.msg
src/visualization/scripts/: visualize.py
